--- a/seance4.ipynb
+++ b/seance4.ipynb
@@ -84,12 +84,12 @@
     "                print (\"Aucune solution\")\n",
     "        else :\n",
     "            x = (-c * 1.0) / b\n",
-    "            print (\"Une solution :\", xpolynome(a, b, c, x))\n",
+    "            print (\"Une solution :\", polynome(a, b, c, x))\n",
     "    else :\n",
     "        d = b * b - 4 * a * c\n",
     "    if(d == 0): \n",
     "        x = -b / (2.0 * a) \n",
-    "        print (\"Une solution :\", xpolynome(a, b, c, x) )\n",
+    "        print (\"Une solution :\", polynome(a, b, c, x) )\n",
     "    elif(d > 0):\n",
     "        r = sqrt(d) \n",
     "        x1 = (-b - r) / (2.0 * a) \n",
@@ -99,8 +99,7 @@
     "        polynome(a, b, c, x2)\n",
     "    else :\n",
     "        print (\"Aucune solution\")\n",
-    "\n",
-    "print(racine(3,2,1))"
+    "(racine(3,2,1))"
    ]
   },
   {
@@ -130,7 +129,10 @@
    ],
    "source": [
     "import math\n",
-    "math.sqrt(8)"
+    "method 1\n",
+    "math.sqrt(8)\n",
+    "method 2\n",
+    "np.sqrt "
    ]
   },
   {
@@ -178,7 +180,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -219,6 +223,173 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1. Lire la doc de la fonction solveet l’utiliser pour calculer les racines d’un polynôme général de degré deux, puis de degré trois"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1, 1]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy.solvers import solve\n",
+    "from sympy import Symbol\n",
+    "\n",
+    "x = Symbol('x')\n",
+    "solve(x**2 - 1, x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2. Lire la documentation des fonction sevalf et N pour évaluer l’expression π^2/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle 2.46740110027234$"
+      ],
+      "text/plain": [
+       "2.46740110027234"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "N((pi**2)/(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3. Déterminer la partie réelle et imaginaire de l’expression : (1+i√3)^20 / 1+i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29525\n",
+      "-29525\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "    \n",
+    "from sympy import re, im, I, E\n",
+    "from sympy.abc import x, y\n",
+    "print(re((1+(I*sqrt(3))**20)/(1+I)))\n",
+    "print(im((1+(I*sqrt(3))**20)/(1+I)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4. Lire la documentation de la fonction diff et calculer la dérivée de xe^x^x^x par rapport à x."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle x x^{x^{x}} \\left(x^{x} \\left(\\log{\\left(x \\right)} + 1\\right) \\log{\\left(x \\right)} + \\frac{x^{x}}{x}\\right) e^{x^{x^{x}}} + e^{x^{x^{x}}}$"
+      ],
+      "text/plain": [
+       "x*x**(x**x)*(x**x*(log(x) + 1)*log(x) + x**x/x)*exp(x**(x**x)) + exp(x**(x**x))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sympy import Function, Symbol\n",
+    "x = Symbol('x')\n",
+    "f=x*E**x**x**x\n",
+    "diff(f,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5. Calculer avec Sympy les limites suivantes "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "print (limit(sin(x)/x, x, 0))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -230,6 +401,65 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Déterminer le nombre de zéro que contient l’entier 123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12146304367025329675766243241881295855454217088483382315328918161829235892362167668831156960612640202170735835221294047782591091570411651472186029519906261646730733907419814952960000000000000000000000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "gfg_exp = factorial(123)\n",
+    "print(gfg_exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nbres de zeros 42\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sympy import *\n",
+    "\n",
+    "f123 = factorial(123)\n",
+    "total = 0\n",
+    "for c in str(f123):\n",
+    "    if c == \"0\":\n",
+    "       total += 1\n",
+    "    \n",
+    "print(\"nbres de zeros\",total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -248,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
